# EventProcessor

./: .gitignore  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/EventProcessorApp/: CMakeLists.txt
apps/EventProcessorApp/include/: Event.h  EventProcessorLockFree.h  EventProcessorMutex.h  EventSlot.h  MathUtils.h
apps/EventProcessorApp/src/: main.cpp
